fix[frontend]: fix user position page item align issue

--- a/nextjs/src/app/globals.css
+++ b/nextjs/src/app/globals.css
@@ -466,7 +466,6 @@ input[type="number"]::-webkit-outer-spin-button {
   width: 100%;
   /* max-w-7xl (80rem) */
   align-items: flex-start;
-  justify-content: center;
 }
 
 .grid-container {
